--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,8 @@ services:
     volumes:
       ./postgres/pgdata/:var/lib/postgresql/data
     restart: on-failure
+
+  api:
+    build: .
+    container_name: api
+    comand: sh -c "gunicorn --bind 0.0.0.0:8000 --workers=4"    
